// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ALM integration correctly 1`] = `
<div
  id="settings-page"
>
  <Suggestions
    suggestions="settings"
  />
  <Helmet
    defer={false}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="settings.page"
  />
  <PageHeader />
  <div
    className="layout-page"
  >
    <ScreenPositionHelper
      className="layout-page-side-outer"
    >
      <Component />
    </ScreenPositionHelper>
    <div
      className="layout-page-main"
    >
      <div
        className="layout-page-main-inner"
      >
        <div
          className="big-padded"
        >
          <withRouter(Connect(withAppState(AlmIntegration)))
            selectedCategory="almintegration"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render analysis scope correctly 1`] = `
<div
  id="settings-page"
>
  <Suggestions
    suggestions="settings"
  />
  <Helmet
    defer={false}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="settings.page"
  />
  <PageHeader />
  <div
    className="layout-page"
  >
    <ScreenPositionHelper
      className="layout-page-side-outer"
    >
      <Component />
    </ScreenPositionHelper>
    <div
      className="layout-page-main"
    >
      <div
        className="layout-page-main-inner"
      >
        <div
          className="big-padded"
        >
          <AnalysisScope
            selectedCategory="exclusions"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render default view correctly 1`] = `
<div
  id="settings-page"
>
  <Suggestions
    suggestions="settings"
  />
  <Helmet
    defer={false}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="settings.page"
  />
  <PageHeader />
  <div
    className="layout-page"
  >
    <ScreenPositionHelper
      className="layout-page-side-outer"
    >
      <Component />
    </ScreenPositionHelper>
    <div
      className="layout-page-main"
    >
      <div
        className="layout-page-main-inner"
      >
        <div
          className="big-padded"
        >
          <Connect(withRouter(SubCategoryDefinitionsList))
            category="general"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render default view correctly 2`] = `
<div
  className="layout-page-side-outer"
>
  <div
    className="layout-page-side"
    style={
      Object {
        "top": 0,
      }
    }
  >
    <div
      className="layout-page-side-inner"
    >
      <Connect(CategoriesList)
        defaultCategory="general"
        selectedCategory="general"
      />
    </div>
  </div>
</div>
`;

exports[`should render languages correctly 1`] = `
<div
  id="settings-page"
>
  <Suggestions
    suggestions="settings"
  />
  <Helmet
    defer={false}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="settings.page"
  />
  <PageHeader />
  <div
    className="layout-page"
  >
    <ScreenPositionHelper
      className="layout-page-side-outer"
    >
      <Component />
    </ScreenPositionHelper>
    <div
      className="layout-page-main"
    >
      <div
        className="layout-page-main-inner"
      >
        <div
          className="big-padded"
        >
          <withRouter(Connect(Languages))
            selectedCategory="languages"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render newCodePeriod correctly 1`] = `
<div
  id="settings-page"
>
  <Suggestions
    suggestions="settings"
  />
  <Helmet
    defer={false}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="settings.page"
  />
  <PageHeader />
  <div
    className="layout-page"
  >
    <ScreenPositionHelper
      className="layout-page-side-outer"
    >
      <Component />
    </ScreenPositionHelper>
    <div
      className="layout-page-main"
    >
      <div
        className="layout-page-main-inner"
      >
        <div
          className="big-padded"
        >
          <NewCodePeriod />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render pull request decoration binding correctly 1`] = `
<div
  id="settings-page"
>
  <Suggestions
    suggestions="settings"
  />
  <Helmet
    defer={false}
    encodeSpecialCharacters={true}
    prioritizeSeoTags={false}
    title="settings.page"
  />
  <PageHeader />
  <div
    className="layout-page"
  >
    <ScreenPositionHelper
      className="layout-page-side-outer"
    >
      <Component />
    </ScreenPositionHelper>
    <div
      className="layout-page-main"
    >
      <div
        className="layout-page-main-inner"
      >
        <div
          className="big-padded"
        >
          <Connect(withRouter(SubCategoryDefinitionsList))
            category="pull_request_decoration_binding"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
